Rename schema graph model to importance model